# kapec-engine

./: CMakeLists.txt  README.md
cmake/: Libraries.cmake  Pack.cmake
engine/: Engine3D.cpp  Engine3D.h
engine/primitives/: Matrix.cpp  Matrix.h  Mesh.h  Triangle.h  Vector3D.h
game/: Engine.cpp  Engine.h  main.cpp
sandbox/: CMakeLists.txt
sources/kapec-engine/common/: CMakeLists.txt
templates/: generate-class-gtest.py  generate-class.py
